# CLACELL

./: .gitignore  CLACELL_GCB_Abstract.odt  CLACELL_pipeline.drawio  CLACELL_pipeline_drafts.drawio  LICENSE  README.md  R_commands.md  pyproject.toml
HPC/: HPC_notes.md  annotate_data.py  finetune_integration_adjusted.py  run_multiple_trainings_randomforest.py  submit_annotation_job.sh  submit_bayes_test_job.sh  submit_celltypist_job.sh  submit_extratrees_bayes_job.sh  submit_lightgbm_bayes_job.sh  submit_logisticregression_bayes_job.sh  submit_randomforest_bayes_job.sh  submit_xgboost_bayes_job.sh  train_autoencoder_lr.py  train_autoencoder_lr_v1.py  train_celltypist.py  train_conditional_autoencoder_lr_v1.py  train_extratrees_bayes.py  train_lightgbm_bayes.py  train_linearsvc_bayes.py  train_logisticregression_bayes.py  train_randomforest_bayes.py  train_singler_fast.py  train_xgboost_bayes.py
Paper/: CLACELL.bib  Makefile  main.tex  preamble.tex  references.bib
clacell/: __init__.py  classifier.py  custom_stopper.py  marker_annotator.py  preprocessing.py  test_robustness.py
evaluation/: CellTypistTest.ipynb  Test.ipynb  compare_datasets.ipynb  compare_to_scumi.py  compute_normalization_target_sum.py  convert_h5ad_to_csv.py  create_feature_importance.ipynb  dataset_analysis.ipynb  decoupler.ipynb  evaluate_clacell_package.ipynb  feature_importance_logisticregression.pkl  master_feature_importance.pkl  master_feature_importance_interleaved_marker_genes.pkl  plot_robustness_results.ipynb  scumi_wrapper.py  test.ipynb  test_robustness.py
presentation1/: package-lock.json  package.json  (+2 more)
(+95 files in other folders)
