[project]
name = "clacell"
license = "MIT"
version = "2.1.2"
description = "robust cell type classifier for immune cells"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "numpy>=2.4.6",
    "pandas>=2.3.3",
    "scikit-learn>=1.8.0",
    "anndata>=0.12.16",
    "scanpy>=1.12.1",
    "scipy>=1.17.1",
    "scikit-image>=0.26.0",
    "igraph>=1.0.0",
    "scikit-optimize>=0.10.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
include = [
    "clacell/**/*.py"
]

[project.urls]
"Homepage" = "https://github.com/Boolean-true/CLACELL"